--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
-  "name": "CatGallery",
+  "name": "КотоГалерея",
+  "author": {
+    "name": "Ivan Dubeyko"
+  },
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,8 +13,19 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-community/hooks": "^3.0.0",
+    "@react-navigation/native": "^6.1.18",
+    "@react-navigation/native-stack": "^6.10.1",
+    "@types/resize-observer-browser": "^0.1.11",
+    "axios": "^1.7.2",
+    "mobx": "^6.13.1",
+    "mobx-react": "^9.1.1",
+    "mobx-react-lite": "^4.0.7",
     "react": "18.2.0",
-    "react-native": "0.74.3"
+    "react-native": "0.74.3",
+    "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "^3.29.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
