--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mobx-react-lite": "^4.0.7",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-image-zoom-viewer": "^3.0.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.29.0"
