--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-community/hooks": "^3.0.0",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.10.1",
+    "@types/react-native-popup-dialog": "^0.16.8",
     "@types/resize-observer-browser": "^0.1.11",
     "axios": "^1.7.2",
     "mobx": "^6.13.1",
@@ -25,6 +26,7 @@
     "react-native": "0.74.3",
     "react-native-fast-image": "^8.6.3",
     "react-native-image-zoom-viewer": "^3.0.1",
+    "react-native-popup-menu": "^0.16.1",
     "react-native-safe-area-context": "^4.10.8",
     "react-native-screens": "^3.29.0"
   },
